examples/invalid/syntax/2.lua
-- ОШИБКА: оператор без операнда
x = 1 + * 2

-- ОШИБКА: два оператора подряд
x = 1 + - 2

-- ОШИБКА: незакрытая скобка
x = (1 + 2

-- ОШИБКА: лишняя закрывающая скобка
x = (1 + 2))

-- ОШИБКА: два выражения подряд
x = 1 2

-- ОШИБКА: not без выражения
x = not

-- ОШИБКА: оператор .. без второго операнда
x = "hello" ..

-- ОШИБКА: неправильный оператор сравнения
if x = 10 then  -- должно быть ==
    print("x is 10")
end

-- ОШИБКА: неправильный логический оператор
if x & y then  -- в Lua нет &, используется and
    print("both true")
end